--- a/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
+++ b/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
@@ -570,6 +570,17 @@
   publisher = {American Psychological Association},
 }
 
+@Article{akechi2013attention,
+  author    = {Akechi, Hironori and Senju, Atsushi and Uibo, Helen and Kikuchi, Yukiko and Hasegawa, Toshikazu and Hietanen, Jari K},
+  title     = {Attention to eye contact in the West and East: autonomic responses and evaluative ratings},
+  journal   = {PLoS One},
+  year      = {2013},
+  volume    = {8},
+  number    = {3},
+  pages     = {e59312},
+  publisher = {Public Library of Science},
+}
+
 @Article{vredenburgh2016young,
   author    = {Vredenburgh, Christopher and Kushnir, Tamar},
   title     = {Young Children's Help-Seeking as Active Information Gathering},
